# bevy_koto

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: image.koto  scrolling_rects.koto  scrolling_squares.koto  text.koto  whitney.koto
assets/scripts/: image.koto  scrolling_squares.koto  text.koto  whitney.koto
assets/scripts/utils/: palette.koto
assets/utils/: main.koto  math.koto
examples/: demo.rs
src/: camera.rs  color.rs  entity.rs  geometry.rs  koto_plugins.rs  lib.rs  prelude.rs  random.rs  runtime.rs  shape.rs  text.rs  window.rs
