[package]
name = "bevy_koto"
version = "0.2.0"
edition = "2021"
authors = ["irh <ian.r.hobson@gmail.com>"]
license = "MIT"
description = "Koto support for Bevy"
homepage = "https://koto.dev"
repository = "https://github.com/koto-lang/bevy_koto"
keywords = ["scripting", "language", "koto", "bevy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["camera", "color", "geometry", "random", "shape", "text", "window"]

camera = []
color = ["koto_color", "bevy/bevy_sprite"]
geometry = ["koto_geometry"]
random = ["koto_random"]
shape = ["bevy/bevy_sprite"]
text = ["bevy/bevy_text"]
window = []

[dependencies]
# Multi-producer multi-consumer channels for message passing
crossbeam-channel = "0.5"
# Provides a clone macro
fb_cloned = "0.1"
# More compact and efficient implementations of the standard synchronization primitives.
parking_lot = "0.12"
# derive(Error)
thiserror = "1"

koto = { git = "https://github.com/koto-lang/koto", default-features = false, features = ["arc"]}
koto_color = { git = "https://github.com/koto-lang/koto", optional = true }
koto_geometry = { git = "https://github.com/koto-lang/koto", optional = true }
koto_random = { git = "https://github.com/koto-lang/koto", optional = true, default-features = false }

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_asset", "bevy_core_pipeline", "bevy_window"]

[dev-dependencies]
# Flexible concrete Error type built on std::error::Error
anyhow = "1.0.82"
# A simple to use, efficient, and full-featured Command Line Argument Parser
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies.bevy]
version = "0.15"
default-features = false
features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_gilrs",
  "bevy_render",
  "bevy_sprite",
  "bevy_state",
  "bevy_text",
  "bevy_ui",
  "bevy_window",
  "bevy_winit",
  "default_font",
  "png",
  "x11",
  "file_watcher",
  "multi_threaded",
  "tonemapping_luts",
]
